Fixed tests